--- a/design.css
+++ b/design.css
@@ -120,12 +120,22 @@ section {
   }
 
   .desc {
-    font-size: 2.4vw;
+    font-family: 'Helvetica Neue';
+    font-size: 2.2vw;
     text-align: center;
     opacity: 60%;
-    font-weight: 100;
+    font-weight: 300;
     margin-top: 26px;
     line-height: 1.2em;
+  }
+
+  .contact-desc {
+    font-family: 'Helvetica Neue';
+    font-size: 1.5vw;
+    text-align: center;
+    font-weight: 300;
+    line-height: 1.2em;
+    padding-top: calc(70px + 5vw);
   }
 
   .cercle { 
@@ -175,7 +185,7 @@ h4 {
     width: 86%;
     position: absolute; /* postulat de départ */
     top: 0%;
-    left: 50%; /* à 50%/50% du parent référent */
+    left: 49%; /* à 50%/50% du parent référent */
     transform: translate(-50%, 50%);
     margin-top: calc(80px - 4vw);
 }
@@ -183,26 +193,67 @@ h4 {
 .webapp {
     width: 86%;
     position: absolute; /* postulat de départ */
-    top: 0%;
-    left: 50%; /* à 50%/50% du parent référent */
+    top: -5%;
+    left: 47%; /* à 50%/50% du parent référent */
     transform: translate(-50%, 50%);
     margin-top: calc(10px - 4vw);
 }
 
 .centrage2 {
     width: 20vw;
-    font-size: 2vw;
+    font-size: 1.4vw;
     position: absolute; /* postulat de départ */
-    top: calc(30% + 10vw);
+    top: calc(70px + 13vw);
     left: calc(50% + 20px);
-    margin-top: calc(10px - 4vw);
 }
 
 .centrage1 {
     width: 20vw;
-    font-size: 2vw;
+    font-size: 1.4vw;
     position: absolute; /* postulat de départ */
-    top: calc(30% + 10vw);
+    top: calc(70px + 13vw);
     right: calc(50% + 20px);
-    margin-top: calc(10px - 4vw);
+}
+
+.fb {
+    width: 1vw;
+    font-size: 1.4vw;
+    position: absolute; /* postulat de départ */
+    top: 45%;
+    right: calc(50% + 6vw);
+}
+
+.twi {
+    width: 2vw;
+    font-size: 1.4vw;
+    position: absolute; /* postulat de départ */
+    top: 45%;
+    right: calc(50%);
+}
+
+.ig {
+    width: 2vw;
+    font-size: 1.4vw;
+    position: absolute; /* postulat de départ */
+    top: 45%;
+    right: calc(50% - 6vw);
+}
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+}
+
+.video-container iframe,  
+.video-container object,  
+.video-container embed {
+	position: absolute;
+	top: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
+	width: 80%;
+	height: 80%;
 }
