--- a/design.css
+++ b/design.css
@@ -219,24 +219,27 @@ h4 {
     width: 1vw;
     font-size: 1.4vw;
     position: absolute; /* postulat de départ */
-    top: 45%;
-    right: calc(50% + 6vw);
+    top: 50%;
+    left: calc(50% - 6vw);
+    transform: translate(-50%, -50%);
 }
 
 .twi {
     width: 2vw;
     font-size: 1.4vw;
     position: absolute; /* postulat de départ */
-    top: 45%;
-    right: calc(50%);
+    top: 50%;
+    left: calc(50%);
+    transform: translate(-50%, -50%);
 }
 
 .ig {
     width: 2vw;
     font-size: 1.4vw;
     position: absolute; /* postulat de départ */
-    top: 45%;
-    right: calc(50% - 6vw);
+    top: 50%;
+    left: calc(50% + 6vw);
+    transform: translate(-50%, -50%);
 }
 
 .video-container {
@@ -257,3 +260,85 @@ h4 {
 	width: 80%;
 	height: 80%;
 }
+
+
+
+
+
+
+
+
+  form{
+	position: absolute;
+	top: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
+
+  }
+  .input-holder{
+    position: relative;
+    margin: 0 0 20px;
+
+  }
+  input,
+  textarea{
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    padding: 10px;
+    width: 100%;
+    resize: none;
+    font-family: 'Gill Sans';
+    font-size: 1.4vw;
+    font-weight: 300;
+  }
+
+  textarea{
+    min-height: 100px;
+  }
+  .message{
+    position: absolute;
+    z-index: 9;
+    display: none;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    background: #D9585C;
+    color: #fff;
+    text-align: center;
+  }
+
+    .message:after{
+      content:'';
+      position: absolute;
+      top: -10px;
+      left: 50%;
+      display: block;
+      margin-left: -10px;
+      border: solid;
+      border-color: #D9585C transparent #D9585C;
+      border-width: 0 10px 10px;
+    }
+  }
+  .is-valid{
+    border-color: #AAD661 !important;
+    transition: 0;
+  }
+  .not-valid{
+    border-color: #D7595F;
+    transition: 0;
+    }
+
+  .submit{
+    display: block;
+    width: 103%;
+    border-radius: 4px;
+    background: transparent;
+    color: #ccc;
+    font-family: 'Gill Sans';
+    font-size: 1.4vw;
+	border: 0;
+	padding: 0.6em 1em;
+	background: #33BB52;
+	color: #fff;
+    border-radius: 4px;
+  }
