--- a/design.css
+++ b/design.css
@@ -97,6 +97,21 @@ nav ul li:hover {
     border-radius: 4px;
 }
 
+.more2 {
+    z-index: 100;
+    position: absolute; /* postulat de départ */
+    top: calc(44% + 20vw); left: 50%; /* à 50%/50% du parent référent */
+    transform: translate(-50%, -50%);
+    font-family: 'Gill Sans';
+    font-size: 1.4vw;
+	position: relative;
+	border: 0;
+	padding: 0.6em 1em;
+	background: #203649;
+	color: #fff;
+    border-radius: 4px;
+}
+
 button:hover {
     opacity: 60%;
 }
