--- a/design.css
+++ b/design.css
@@ -17,7 +17,7 @@ nav {
     width: 100%;
     height: 70px;
     text-align: right;
-    font-size: 1rem;
+    font-size: 1.2vw;
     color: black;
     z-index: 99;
     font-family: 'Gill Sans';
@@ -34,7 +34,7 @@ li {
 
 .devis {
     font-family: 'Gill Sans';
-    font-size: 1rem;
+    font-size: 1.2vw;
 	position: relative;
 	border: 0;
 	padding: 0.6em 1em;
